# askalie

./: .env.example  .gitignore  ASK_ALIE_AGENTIC_POC_FULL_SPEC.md  CLAUDE.md  FREEZE.md  HANDOFF.md  LOOP_PROMPT.md  NEEDS_FROM_USER.md  PLAN.md  PROGRESS.md  pyproject.toml
.claude/: launch.json
ask_alie/: __init__.py  __main__.py  cli.py  config.py  doctor.py  serialization.py
ask_alie/agents/: gap.py  schemas.py  scout.py  skills.py  specs.py
ask_alie/curation/: baseline.py  models.py  service.py
ask_alie/evals/: adjudicate.py  gold.py  judge.py  match.py  metrics.py  report.py
ask_alie/events/: duplicates.py  models.py  restore.py  store.py
ask_alie/ingest/: extract.py  ocr.py  quality.py  reducto.py  render.py  service.py
ask_alie/llm/: client.py  mock.py
ask_alie/privacy/: dates.py  entities.py  registry.py  tokenize.py
ask_alie/readers/: dispatcher.py  runner.py  schema.py
ask_alie/reports/: map.py  models.py  packet.py  service.py
ask_alie/review/: app.py  export.py  jobs.py  models.py  service.py
ask_alie/tools/: case_state.py  curation.py  documents.py  readers.py  registry.py  reports.py  search.py  tasks.py
tests/: conftest.py
tests/fixtures/: make_fixtures.py
tests/integration/: test_full_mock_run.py
tests/unit/: test_agents.py  test_dates.py  test_entities.py  test_evals.py  test_fixtures.py  test_import_boundary.py  test_ingest.py  test_models.py  test_quality.py  test_reader_dispatch.py  test_reducto.py  test_review_ui.py  test_skills.py  test_smoke.py  test_tokenize_service.py  test_tools.py  test_workspace.py
(+9 files in other folders)
