[project]
name = "ask-alie"
version = "0.1.0"
description = "Ask ALIE - local agentic medical-legal chronology POC"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.1",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10"]
dev = ["pytest>=8", "ruff>=0.5", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ask_alie*"]

[tool.setuptools.package-data]
ask_alie = ["agents/prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
